welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: reassignment to val
		case false if (day=0 || day=6) => "10:00"
                                  ^